# crimson

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  depend.sh
cmake/modules/: FindCapnProto.cmake  FindFio.cmake  FindSeastar.cmake
proto/: CMakeLists.txt  crimson.capnp  net.capnp  osd_map.capnp  osd_read.capnp  osd_write.capnp
src/: CMakeLists.txt  capn_connection.cc  capn_connection.h  connection.h  crimson.cc  crimson.h  crimson_put.cc  osd.cc  osd.h
src/common/: CMakeLists.txt  buffer_array_message_reader.h  held_span.h  segment_message_reader.h  xxHash.h
src/fio/: CMakeLists.txt  README.md  fio-engine.cc  fio-engine.h
src/msg/: CMakeLists.txt  direct_messenger.cc  direct_messenger.h  message_helpers.cc  message_helpers.h  messenger.h  socket_messenger.cc  socket_messenger.h
src/store/: CMakeLists.txt  Collection.h  Compound.h  Iovec.h  Manager.h  Nihil.cc  Nihil.h  Object.h  Store.cc  Store.h
src/store/mem/: CMakeLists.txt  Collection.cc  Collection.h  Object.cc  Object.h  PageSet.cc  PageSet.h  Store.cc  Store.h
test/: CMakeLists.txt  test_capn_connection.cc  test_connection.cc  test_memstore.cc  test_messenger.cc
test/fio/: CMakeLists.txt
test/fio/engines/: CMakeLists.txt  engine.cc  engine.h  fio_crimson_osd.cc
test/fio/examples/: crimson-osd.fio
tools/: CMakeLists.txt  osdmaptool.cc
